0.1.8 -> 0.1.9

- Nothing (yet!)


0.1.7 -> 0.1.8

- Added layout preferences saving
- Adding editor tabs reordering
- Modified change highlighting (no more fading)
- Modified Step Over task (based on nesting count)
- Fixed label verifying process
- Fixed global accessibility
- Fixed exception throwing when launching non-saved file
- Fixed symbols address setting (did not change all symbols addresses)


0.1.6 -> 0.1.7

- Added new splash screens
- Added support for multi-files projects
- Added instruction address in editors margins
- Added symbol and labels observation tab
- Added memory summary observation tab
- Added stack pointer following setting
- Added value update indicator
- Fixed memory, stack and register tabs unavailability when not simulating
- Fixed simulation speed setting changeability when simulating
- Optimizing line marking
- Reduced simulation interval lower threshold


0.1.5 -> 0.1.6

- Fixed stack entry sync with current simulation data
- Fixed unread instruction when placed in the same line as a label
- Added menu (in View) to control memory columns visibility
- Fixed cross-platform compatibility
- Adding Chocolatey packaging


0.1.4 -> 0.1.5

- Fixed a bug that prevented updating registers used in STR or LDR instructions
- Fixed a bug where you could only use in the stack the first 10 registers
- Fixed a bug that prevented declaring structures in a structure
- Refactored CodeInterpreter to completely use PC
- Fixing wrong memory management (Big to Little endian)
- Added ASCII column in memory viewing table
- Fixed Stack address and Symbol address settings (enabled during simulation)
- Fixed transparent line numbers in editor


0.1.3 -> 0.1.4

- Fixed directives in BSS not being executed
- Enhanced CPSR/SPSR flag visibility
- Fixed memory search (GUI not updated when searched a address located on another page)
- Changed notifications format
- Added FlatPaks
- Added launching command ($jarmemu)
- Fixed char parsing error (deleting whitespaces)
