@@ -51,8 +51,6 @@ public class SettingsController extends AbstractJArmEmuModule {
     };
 
     // Valeurs par défaut
-    public static final int DEFAULT_SIMULATION_INTERVAL = 25;
-
     public static final boolean DEFAULT_AUTO_BREAK = true;
     public static final boolean DEFAULT_MEMORY_ALIGN_BREAK = false;
     public static final boolean DEFAULT_STACK_ALIGN_BREAK = true;
@@ -121,7 +119,7 @@ public class SettingsController extends AbstractJArmEmuModule {
     public void initialize(URL url, ResourceBundle resourceBundle) {
 
         // Gestion des spinners
-        simIntervalValue = new SpinnerValueFactory.IntegerSpinnerValueFactory(0, 10000, DEFAULT_SIMULATION_INTERVAL, ExecutionWorker.UPDATE_THRESHOLD);
+        simIntervalValue = new SpinnerValueFactory.IntegerSpinnerValueFactory(0, 10000, ExecutionWorker.FALLBACK_UPDATE_INTERVAL, ExecutionWorker.UPDATE_THRESHOLD);
         stackAddressValue = new SpinnerValueFactory.IntegerSpinnerValueFactory(Integer.MIN_VALUE, Integer.MAX_VALUE, StateContainer.DEFAULT_STACK_ADDRESS, 4);
         symbolsAddressValue = new SpinnerValueFactory.IntegerSpinnerValueFactory(Integer.MIN_VALUE, Integer.MAX_VALUE, StateContainer.DEFAULT_SYMBOLS_ADDRESS, 4);
 
@@ -231,7 +229,7 @@ public class SettingsController extends AbstractJArmEmuModule {
         preferences.put(VERSION_KEY, JArmEmuApplication.VERSION);
         preferences.put(LAST_SAVE_PATH_KEY, "");
 
-        setSimulationInterval(DEFAULT_SIMULATION_INTERVAL);
+        setSimulationInterval(ExecutionWorker.FALLBACK_UPDATE_INTERVAL);
         setSourceParser(SourceParser.DEFAULT_SOURCE_PARSER);
 
         setAutoBreakSetting(DEFAULT_AUTO_BREAK);
@@ -287,7 +285,7 @@ public class SettingsController extends AbstractJArmEmuModule {
     }
 
     public int getSimulationInterval() {
-        return preferences.getInt(SIMULATION_INTERVAL_KEY, ExecutionWorker.UPDATE_THRESHOLD);
+        return preferences.getInt(SIMULATION_INTERVAL_KEY, ExecutionWorker.FALLBACK_UPDATE_INTERVAL);
     }
 
     public void setSourceParser(int nb) {
